policies/ReplicaSetPolicy/ConstraintReplicasetOfThree.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: replicaofthree
spec:
  crd:
    spec:
      names:
        kind: ReplicaOfThree
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            minimum:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission

        violation[{"msg": msg}]{
          replicas := to_number(input.review.object.spec.replicas)
          minimum := input.parameters.minimum
          replicas < minimum
          msg := sprintf("Current replica count of %v, doesn't meet the minimum requierment of %v for HA", [replicas,minimum])
        }
